fixed main area overflow

--- a/scss/_wec-front-core.scss
+++ b/scss/_wec-front-core.scss
@@ -17,7 +17,9 @@
     width: 100%;
 
     .main {
+  	    background-color: #f6f6f6;
         height: 100%;
+        overflow: auto;
         padding-top: 48px;
     }
 }
